crates/squealy/tests/compile_fail/case_aggregate_in_subquery_condition_rejected.stderr
error[E0277]: the trait bound `Expr<'_, _, squealy::CaseExprAst<squealy::CaseWhen<squealy::InSubqueryPredicateAst<squealy::AggregateExprAst<squealy::ColumnExprAst<UserId>>, squealy::SubquerySelect<'_, '_, TestConnection, squealy::From<'_, '_, TestConnection, HCons<__SquealyPostExprsProjection<'_>, HNil>, squealy::RootSource<Post<'_>>>, CountExpr<PostId>, Expr<'_, CountExpr<PostId>, squealy::AggregateExprAst<squealy::ColumnExprAst<PostId>>>>>, squealy::LiteralExprAst<{integer}>, squealy::CaseNil>, squealy::LiteralExprAst<{integer}>>>: squealy::ProjectionClass` is not satisfied
  --> tests/compile_fail/case_aggregate_in_subquery_condition_rejected.rs:31:48
   |
31 |     let _query = TestConnection.from::<User>().select_correlated(|(user,), sub| {
   |                                                ^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `squealy::ProjectionClass` is not implemented for `Expr<'_, _, squealy::CaseExprAst<squealy::CaseWhen<squealy::InSubqueryPredicateAst<squealy::AggregateExprAst<squealy::ColumnExprAst<UserId>>, squealy::SubquerySelect<'_, '_, TestConnection, squealy::From<'_, '_, TestConnection, HCons<__SquealyPostExprsProjection<'_>, HNil>, squealy::RootSource<Post<'_>>>, CountExpr<PostId>, Expr<'_, CountExpr<PostId>, squealy::AggregateExprAst<squealy::ColumnExprAst<PostId>>>>>, squealy::LiteralExprAst<{integer}>, squealy::CaseNil>, squealy::LiteralExprAst<{integer}>>>`
help: the trait `squealy::ProjectionClass` is implemented for `Expr<'_, K, Ast>`
  --> $WORKSPACE/crates/squealy-core/src/expr.rs
   |
   | / impl<'scope, K, Ast> ProjectionClass for Expr<'scope, K, Ast>
   | | where
   | |     Ast: ExprAst + AstProjectionClass,
   | |     <Ast as AstProjectionClass>::Class: TermProjectionClass,
   | |____________________________________________________________^
   = note: required for `Ungrouped` to implement `squealy::ValidSelect<Expr<'_, _, squealy::CaseExprAst<squealy::CaseWhen<squealy::InSubqueryPredicateAst<squealy::AggregateExprAst<squealy::ColumnExprAst<UserId>>, squealy::SubquerySelect<'_, '_, TestConnection, squealy::From<'_, '_, TestConnection, HCons<__SquealyPostExprsProjection<'_>, HNil>, squealy::RootSource<Post<'_>>>, CountExpr<PostId>, Expr<'_, CountExpr<PostId>, squealy::AggregateExprAst<squealy::ColumnExprAst<PostId>>>>>, squealy::LiteralExprAst<{integer}>, squealy::CaseNil>, squealy::LiteralExprAst<{integer}>>>, OrderNone>`
note: required by a bound in `select_correlated`
  --> $WORKSPACE/crates/squealy-core/src/query.rs
   |
   |     fn select_correlated<P, Indices>(
   |        ----------------- required by a bound in this associated function
...
   |             crate::ValidSelect<P, <Self as SelectAst<'conn, 'scope, Conn>>::OrderClass>,
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SourceQuery::select_correlated`
